--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
-  "version": "1.5.6",
+  "name": "prajwl",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
     "dev": "next dev",
     "build": "next build && node ./scripts/generate-sitemap",
     "serve": "next start",
+    "export": "next export",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts"
   },
